05_monitoring/manifests/otus-monitoring/monitoring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app: prometheus-operated
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.otus-monitoring
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  labels:
    app: monitoring-stack-grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.otus-monitoring
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 3000
